--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
   <body>
     <h1>Кто проживает на дне океана?</h1>
-    <h6>Губка Боб Квадратные Штаны</h6>
-    <img src="https://static.wikia.nocookie.net/characters/images/5/5d/Spongebob_PNG61.png/revision/latest?cb=20220722233926"
+    <h1>Губка Боб Квадратные Штаны</h1>
+    <img src="https://static.wikia.nocookie.net/ggsh/images/5/5c/Spongebob-squarepants.png/revision/latest?cb=20120114185319&path-prefix=ru"
  style="display: block; margin: 0 auto; width: 200px; height: auto;">
    
  <div class="bio">
@@ -26,3 +26,4 @@
 
 </body>
 </html>
+
