--- a/index.html
+++ b/index.html
@@ -1,29 +1,86 @@
 <!DOCTYPE html>
-<html>
-
- <head>
-    <title>Губка Боб</title>
-    <link rel="stylesheet" href="style.css">
+<html lang="ru">
+<head>
+  <meta charset="UTF-8">
+  <title>Мини-методичка по HTML</title>
 </head>
 
-  <body>
-    <h1>Кто проживает на дне океана?</h1>
-    <h1>Губка Боб Квадратные Штаны</h1>
-    <img src="https://static.wikia.nocookie.net/ggsh/images/5/5c/Spongebob-squarepants.png/revision/latest?cb=20120114185319&path-prefix=ru"
- style="display: block; margin: 0 auto; width: 200px; height: auto;">
-   
- <div class="bio">
-        <p>Губка Боб — весёлый и добрый морской житель, который живёт в ананасе на дне океана в городе Бикини Боттом. Он работает поваром в ресторане «Красти Краб» и обожает жарить крабсбургеры.</p>
-    </div>
+<body bgcolor="#f2f4f8">
+  <center>
+    <h1>Мини-методичка по HTML</h1>
+  </center>
 
-    <div class="bio2">
-        <p>У него есть лучший друг Патрик — морская звезда, и они часто попадают в забавные и нелепые ситуации. Несмотря на простоту, Губка Боб очень трудолюбив и всегда готов прийти на помощь.</p>
-    </div>
+  <br>
 
+  <!-- 1) Абзац -->
+  <center>
+    <table width="80%" cellpadding="12" bgcolor="#dbeafe">
+      <tr>
+        <td>
+          <h2>Абзац</h2>
+          <p>Тег &lt;p&gt; создаёт абзац.</p>
 
-<img src="https://beam-images.warnermediacdn.com/BEAM_LWM_DELIVERABLES/6237f381-2ab7-41ca-8e73-e177033de02f/bf17311d-b348-11ef-9fed-0affd17b6387?host=wbd-images.prod-vod.h264.io&partner=beamcom"
-     style="display: block; margin: 0 auto; width: 1000px; height: auto;">
+          <p><b>Синтаксис:</b></p>
+          <p>&lt;p&gt; … &lt;/p&gt;</p>
 
+          <p><b>Пример:</b></p>
+          <p>Это абзац текста.</p>
+        </td>
+      </tr>
+    </table>
+  </center>
+
+  <br>
+
+  <!-- 2) Заголовки -->
+  <center>
+    <table width="80%" cellpadding="12" bgcolor="#dcfce7">
+      <tr>
+        <td>
+          <h2>Заголовок (h1…h6)</h2>
+          <p>Теги заголовков: &lt;h1&gt; самый большой, &lt;h6&gt; самый маленький.</p>
+
+          <p><b>Синтаксис:</b></p>
+          <p>
+            &lt;h1&gt; … &lt;/h1&gt;<br>
+            &lt;h2&gt; … &lt;/h2&gt;<br>
+            ...<br>
+            &lt;h6&gt; … &lt;/h6&gt;
+          </p>
+
+          <p><b>Пример:</b></p>
+          <h3>Пример h3</h3>
+          <h5>Пример h5</h5>
+        </td>
+      </tr>
+    </table>
+  </center>
+
+  <br>
+
+  
+
+  <!-- 4) Жирный -->
+  <center>
+    <table width="80%" cellpadding="12" bgcolor="#ffe4e6">
+      <tr>
+        <td>
+          <h2>Жирный</h2>
+          <p>Тег &lt;b&gt; делает текст жирным.</p>
+
+          <p><b>Синтаксис:</b></p>
+          <p>&lt;b&gt; … &lt;/b&gt;</p>
+
+          <p><b>Пример:</b></p>
+          <p>Обычный текст и <b>жирный текст</b>.</p>
+        </td>
+      </tr>
+    </table>
+  </center>
+
+ 
 </body>
 </html>
+
+
 
